# vane

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  .stylua.toml  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CoC.md  Dockerfile  GEMINI.md  Justfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SKILL.md  TODO.md  build.rs  build.sh  chore.toml  clay-config.json  clay.toml  clippy.toml  commitlint.config.js  (+19 more)
crates/app/: Cargo.toml
crates/app/src/: context.rs  lib.rs
crates/banner/: Cargo.toml  README.md
crates/banner/src/: lib.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/src/: authoring.rs  main.rs  tui.rs  wizard.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: body.rs  canonical.rs  compile.rs  conn_context.rs  error.rs  fetch.rs  flow_ctx.rs  flow_log.rs  ir.rs  l4.rs  lib.rs  metadata.rs  middleware.rs  phase.rs  predicate.rs  protocol_detect.rs  rule.rs  types.rs  wasm_runtime.rs
crates/core/tests/: acme_inject.rs  body_reader_dedupe.rs  client_auth_compile.rs  config_load.rs  preset_pipeline.rs  trajectory.rs  zero_rtt_compile.rs
crates/daemon/: Cargo.toml  README.md  build.rs
crates/daemon/src/: acme_boot.rs  boot.rs  main.rs  mgmt_handlers.rs  providers.rs  reload.rs  wasm_loader.rs  watcher.rs
crates/daemon/tests/: bind_failure.rs  boot.rs  mgmt.rs  mgmt_http.rs  mgmt_metrics.rs  rate_limit_e2e.rs  reload.rs  tls.rs  wasm_e2e.rs  websocket_e2e.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: body_adapter.rs  executor.rs  factories.rs  fetch.rs  flow_graph.rs  h3.rs  h3_body.rs  h3_listener.rs  hot_reload.rs  lib.rs  listener.rs  listener_ctx.rs  listener_udp.rs  metrics.rs  middleware.rs  peeked_stream.rs  preset.rs  protocol_detect.rs  security.rs  terminator.rs  time.rs  tracing_broadcast.rs  tracing_init.rs  upgrade.rs  verbosity.rs  wasm_context.rs  wasm_fetch.rs
crates/engine/tests/: acme_cloudflare_live.rs  acme_dns01_e2e.rs  acme_handshake_e2e.rs  acme_http01_e2e.rs  cgi_fetch.rs  cgi_fetch_concurrency.rs  crl_fetch.rs  executor.rs  fetch_http_proxy.rs  fetch_http_proxy_client_cache.rs  fetch_http_proxy_dns.rs  fetch_http_proxy_h2.rs  fetch_http_proxy_h3_dns.rs  fetch_http_proxy_h3_retry.rs  fetch_http_proxy_retry.rs  fetch_http_synthesize.rs  fetch_l4_forward.rs  fetch_upstream_mtls.rs  fetch_upstream_tls.rs  fetch_websocket_upgrade.rs  flow_log_sink.rs  h3_server.rs  h3_upstream.rs  hyper_upgrade.rs  link.rs  listener.rs  listener_kind_auto.rs  listener_mtls.rs  listener_tls.rs  middleware_forward_client_ip.rs  middleware_host_header_match.rs  middleware_method_match.rs  middleware_path_prefix.rs  middleware_rate_limit.rs  middleware_wasm.rs  ocsp_e2e.rs  protocol_detect.rs  sni_peek.rs  ticketer.rs  udp_forward.rs  (+4 more)
crates/lib/acme-provider/: Cargo.toml  README.md
crates/lib/cgi-request/: Cargo.toml  README.md
crates/lib/cgi-response/: Cargo.toml  README.md
crates/lib/clienthello/: Cargo.toml  README.md
crates/lib/guess/: Cargo.toml  (+1 more)
crates/mgmt/: Cargo.toml  README.md
crates/testutil/: Cargo.toml  build.rs
crates/vane/: Cargo.toml  build.rs
crates/wasm/: Cargo.toml  README.md  build.rs
crates/xtask/: Cargo.toml
engine/: Cargo.toml  build.rs  clay-config.json
engine/src/: bootstrap.rs  main.rs
modules/totp/: Cargo.toml  build.sh
src/api/: Cargo.toml  build.rs  mod.rs  openapi.rs  response.rs  router.rs
src/core/: Cargo.toml  bootstrap.rs  build.rs  console.rs  daemon.rs  logging.rs  mod.rs  monitor.rs  response.rs  root.rs  router.rs  socket.rs
src/engine/: Cargo.toml  context.rs  contract.rs  executor.rs  interfaces.rs  key_scoping.rs  mod.rs
src/extra/: Cargo.toml
src/panel/: Cargo.toml
src/primitives/: Cargo.toml
src/transport/: Cargo.toml
src/vane/: Cargo.toml
tests/: .gitignore  Cargo.toml  clay-config.json  main.py  run.py  runner.py  test_suite.py  wsclient.py  wsserver.py
tests/engine/: clienthello.rs  config.rs  detect.rs  dynamic.rs  flow.rs  forward.rs  tls.rs
tests/http/: test.py
tests/origin/: test.py  test_create_ip_host.py  test_create_no_scheme.py  test_create_origin_without_scheme.py  test_create_standard.py  test_delete_origin.py  test_dummy_https_origin.py  test_file_generation.py  test_http_origin_with_path.py  test_invalid_url.py  test_ip_origin.py  test_list_and_get.py  test_multiple_writes.py  test_skip_ssl_flag.py  test_update_origin.py
tests/prepare/: build_and_install_target_bin.py  check_pkg_installation.py  check_pkg_version.py  system_info.py
tests/src/: builder.rs  lib.rs  main.rs
tests/tests/: cli_e2e.rs
tests/units/: config_utils.py  test_backend_auto_recovery.py  test_capture_all_fallback.py  test_config_formats_json_toml.py  test_config_formats_toml_yaml.py  test_config_formats_yaml_json.py  test_console.py  test_custom_resolver.py  test_domain_forwarding.py  test_duplicate_configs.py  test_dynamic_port.py  test_env_loglevel.py  test_external_plugin_c.py  test_external_plugin_cpp.py  test_external_plugin_exec_env.py  test_external_plugin_exec_failure.py  test_external_plugin_exec_flow.py  test_external_plugin_go.py  test_external_plugin_httpx.py  test_external_plugin_java.py  test_external_plugin_lua.py  test_external_plugin_node.py  test_external_plugin_persistence.py  test_external_plugin_python.py  test_external_plugin_registration.py  test_external_plugin_ruby.py  test_external_plugin_rust.py  test_external_plugin_shell.py  test_external_plugin_unix.py  test_external_plugin_zig.py  test_fallback_auto_recovery.py  test_fallback_routing.py  test_flow_engine_basic.py  test_flow_engine_quic.py  test_flow_engine_tls.py  test_flow_engine_udp.py  test_flow_ratelimit.py  test_invalid_json.py  test_invalid_toml.py  test_invalid_yaml.py  (+27 more)
tests/utils/: config.py  env.py  env_loader.py  http_utils.py  net_utils.py  plugin_test_utils.py  port_config_utils.py  quic_utils.py  template.py  test_helpers.py  tls_utils.py
(+1748 files in other folders)
