[workspace]
resolver = "3"
members = [
	"crates/cli",
	"crates/core",
	"crates/daemon",
	"crates/engine",
	"crates/lib/acme-provider",
	"crates/lib/cgi-request",
	"crates/lib/cgi-response",
	"crates/lib/clienthello",
	"crates/lib/guess",
	"crates/lib/h3-body",
	"crates/lib/hickory-tower-resolver",
	"crates/lib/http-retry-policy",
	"crates/lib/notify-twophase",
	"crates/lib/ocsp-mock-responder",
	"crates/lib/ocsp-staple",
	"crates/lib/peeked-stream",
	"crates/lib/prom-cardinality-cap",
	"crates/lib/quinn-shared-socket",
	"crates/lib/rustls-crl-refresh",
	"crates/lib/rustls-native-roots-cache",
	"crates/lib/rustls-pem-roots",
	"crates/lib/rustls-ticketer",
	"crates/lib/tokio-bind-retry",
	"crates/lib/tracing-broadcast",
	"crates/lib/virtual-socket",
	"crates/mgmt",
	"crates/testutil",
	"crates/wasm",
	"tests",
]

[workspace.package]
version = "0.10.4"
authors = ["Canmi <t@canmi.icu>"]
edition = "2024"
homepage = "https://vane.canmi.app"
license = "MIT"
repository = "https://github.com/canmi21/vane"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
acme-provider = { path = "crates/lib/acme-provider", version = "0.0.1", default-features = false }
async-trait = "0.1"
cgi-request = { path = "crates/lib/cgi-request", version = "0.0.1" }
cgi-response = { path = "crates/lib/cgi-response", version = "0.0.1" }
clienthello = { path = "crates/lib/clienthello", version = "0.2" }
guess = { path = "crates/lib/guess", version = "0.2", default-features = false }
h3-body = { path = "crates/lib/h3-body", version = "0.0.1" }
hickory-tower-resolver = { path = "crates/lib/hickory-tower-resolver", version = "0.0.1" }
http-retry-policy = { path = "crates/lib/http-retry-policy", version = "0.0.1" }
notify-twophase = { path = "crates/lib/notify-twophase", version = "0.0.1" }
ocsp-mock-responder = { path = "crates/lib/ocsp-mock-responder", version = "0.0.1" }
ocsp-staple = { path = "crates/lib/ocsp-staple", version = "0.0.1" }
peeked-stream = { path = "crates/lib/peeked-stream", version = "0.0.1" }
prom-cardinality-cap = { path = "crates/lib/prom-cardinality-cap", version = "0.0.1" }
quinn-shared-socket = { path = "crates/lib/quinn-shared-socket", version = "0.0.1" }
rustls-crl-refresh = { path = "crates/lib/rustls-crl-refresh", version = "0.0.1" }
rustls-native-roots-cache = { path = "crates/lib/rustls-native-roots-cache", version = "0.0.1" }
rustls-pem-roots = { path = "crates/lib/rustls-pem-roots", version = "0.0.1" }
rustls-ticketer = { path = "crates/lib/rustls-ticketer", version = "0.0.1", default-features = false }
tokio-bind-retry = { path = "crates/lib/tokio-bind-retry", version = "0.0.1" }
tracing-broadcast = { path = "crates/lib/tracing-broadcast", version = "0.0.1" }
vane-core = { path = "crates/core", version = "0.10.4" }
vane-engine = { path = "crates/engine", version = "0.10.4" }
vane-mgmt = { path = "crates/mgmt", version = "0.10.4" }
# `vane-testutil` is an internal test fixture that never goes to
# crates.io — see its `publish = false` in `crates/testutil/Cargo.toml`.
# Path-only here so `cargo publish` strips this dev-dependency entirely
# from sibling crates' published Cargo.toml (cargo silently drops
# dev-dependencies that don't carry a `version =` pin).
vane-testutil = { path = "crates/testutil" }
vane-wasm = { path = "crates/wasm", version = "0.10.4" }
virtual-socket = { path = "crates/lib/virtual-socket", version = "0.0.1" }
wasmtime = { version = "44.0.1", features = ["component-model", "async", "cranelift"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
codegen-units = 256
lto = false
strip = false
debug = "full"
panic = "unwind"
