[workspace]
resolver = "3"
members = [
	"crates/banner",
	"crates/cli",
	"crates/core",
	"crates/daemon",
	"crates/engine",
	"crates/lib/acme-provider",
	"crates/lib/cgi-request",
	"crates/lib/cgi-response",
	"crates/lib/clienthello",
	"crates/lib/guess",
	"crates/lib/h3-body",
	"crates/lib/hickory-tower-resolver",
	"crates/lib/http-retry-policy",
	"crates/lib/ndjson-rpc",
	"crates/lib/notify-twophase",
	"crates/lib/ocsp-mock-responder",
	"crates/lib/ocsp-staple",
	"crates/lib/peeked-stream",
	"crates/lib/prom-cardinality-cap",
	"crates/lib/quinn-shared-socket",
	"crates/lib/rustls-crl-refresh",
	"crates/lib/rustls-native-roots-cache",
	"crates/lib/rustls-pem-roots",
	"crates/lib/rustls-sni-resolver",
	"crates/lib/rustls-ticketer",
	"crates/lib/tokio-bind-retry",
	"crates/lib/tracing-broadcast",
	"crates/lib/virtual-socket",
	"crates/mgmt",
	"crates/testutil",
	"crates/wasm",
	"crates/xtask",
	"tests",
]

[workspace.package]
version = "0.10.8"
authors = ["Canmi <t@canmi.icu>"]
edition = "2024"
homepage = "https://vane.canmi.app"
license = "MIT"
repository = "https://github.com/canmi21/vane"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Cherry-picked from nursery. Threshold tuned in clippy.toml.
cognitive_complexity = "warn"
# Pedantic's noisiest lint by an order of magnitude — mostly demands
# backticks around BTreeMap / HashMap / NEXTEST_ENV-style identifiers
# in /// docs. Net signal too low to keep on.
doc_markdown = "allow"
# Triggered by `validate_*` placeholder fns whose `Result<(), Error>`
# signature must match the real validators they stand in for. Removing
# the wrap would break the function-pointer contract.
unnecessary_wraps = "allow"
# Triggered by AEAD / QUIC crypto bindings (`aad` vs `aead`) where the
# names are standards-defined terms of art.
similar_names = "allow"

# Internal path-based crates only. Third-party deps live in each crate's own
# Cargo.toml; `cargo-deny` (deny.toml, `bans.multiple-versions`) enforces unity.
[workspace.dependencies]
# crates/lib/* — generic, independently-publishable libs.
acme-provider = { path = "crates/lib/acme-provider", version = "0.0.1", default-features = false }
cgi-request = { path = "crates/lib/cgi-request", version = "0.0.1" }
cgi-response = { path = "crates/lib/cgi-response", version = "0.0.1" }
clienthello = { path = "crates/lib/clienthello", version = "0.2.2" }
guess = { path = "crates/lib/guess", version = "0.2.1", default-features = false }
h3-body = { path = "crates/lib/h3-body", version = "0.0.2" }
hickory-tower-resolver = { path = "crates/lib/hickory-tower-resolver", version = "0.0.1" }
http-retry-policy = { path = "crates/lib/http-retry-policy", version = "0.0.1" }
ndjson-rpc = { path = "crates/lib/ndjson-rpc", version = "0.0.2" }
notify-twophase = { path = "crates/lib/notify-twophase", version = "0.0.2" }
ocsp-mock-responder = { path = "crates/lib/ocsp-mock-responder", version = "0.0.1" }
ocsp-staple = { path = "crates/lib/ocsp-staple", version = "0.0.2" }
peeked-stream = { path = "crates/lib/peeked-stream", version = "0.0.1" }
prom-cardinality-cap = { path = "crates/lib/prom-cardinality-cap", version = "0.0.1" }
quinn-shared-socket = { path = "crates/lib/quinn-shared-socket", version = "0.0.1" }
rustls-crl-refresh = { path = "crates/lib/rustls-crl-refresh", version = "0.0.3" }
rustls-native-roots-cache = { path = "crates/lib/rustls-native-roots-cache", version = "0.0.2" }
rustls-pem-roots = { path = "crates/lib/rustls-pem-roots", version = "0.0.1" }
rustls-sni-resolver = { path = "crates/lib/rustls-sni-resolver", version = "0.0.1" }
rustls-ticketer = { path = "crates/lib/rustls-ticketer", version = "0.0.2", default-features = false }
tokio-bind-retry = { path = "crates/lib/tokio-bind-retry", version = "0.0.2" }
tracing-broadcast = { path = "crates/lib/tracing-broadcast", version = "0.0.3" }
virtual-socket = { path = "crates/lib/virtual-socket", version = "0.0.1" }

# crates/* — vane product crates.
vane-banner = { path = "crates/banner", version = "0.10.8" }
vane-core = { path = "crates/core", version = "0.10.8" }
# `default-features = false` at workspace level so consumers (daemon,
# testutil) get a neutral starting point and must opt into the crypto
# backend (`aws-lc-rs` / `ring`) and stack features (`h3`, `cgi`,
# `acme`, …) explicitly via their own feature tables. Cargo requires
# the workspace declaration to specify default-features for downstream
# crates to be allowed to override it.
vane-engine = { path = "crates/engine", version = "0.10.8", default-features = false }
vane-mgmt = { path = "crates/mgmt", version = "0.10.8" }
# Path-only (no `version =`) so `cargo publish` strips it from sibling crates'
# published manifests entirely — testutil is `publish = false`.
vane-testutil = { path = "crates/testutil" }
vane-wasm = { path = "crates/wasm", version = "0.10.8" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
codegen-units = 256
lto = false
strip = false
debug = "full"
panic = "unwind"
