[package]
name = "vane"
version = "3.0.2"
edition = "2024"
description = "A flow-based, event-driven Rust reverse proxy engine with hot-reloadable routing, unified middleware runtime, and HTTP/3 support."
license = "AGPL-3.0"
repository = "https://github.com/canmi21/vane"
readme = "./../README.md"
keywords = ["network", "server", "web", "vane", "proxy"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "vane"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
rustls = { version = "0.23", features = ["ring", "aws-lc-rs"] }
rustls-pemfile = "2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["webpki-roots", "http2"] }
futures = "0.3"
futures-util = "0.3"
dotenvy = "0.15"
fancy-log = "0.1"
shellexpand = "3"
anyhow = "1"
lazy-motd = "1"
chrono = { version = "0.4", features = ["serde"] }
path-clean = "1"
percent-encoding = "2"
headers = "0.4"
toml = "0.9"
webpki-roots = "1"
rcgen = "0.14"
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11", features = ["rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
http = "1"
include_dir = "0.7"
lazy-limit = "1"
governor = "0.10"
nonzero = "0.2"
anynet = "1"
uuid = { version = "1", features = ["v4", "serde"] }
home = "0.5"
ip-lookup = "0.1"
totp = { path = "./../modules/totp" }
once_cell = "1.21"
url = "2"
rand = "0.9"
x509-parser = "0.18"
pem = "3"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
der = "0.7"
oid-registry = "0.8"
rust-embed = "8"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serial_test = "2"
tempfile = "3"