[package]
name = "vane-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vane-engine.workspace = true
vane-primitives.workspace = true
vane-transport.workspace = true
vane-test-utils.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[test]]
name = "engine_forward"
path = "engine/forward.rs"

[[test]]
name = "engine_config"
path = "engine/config.rs"

[[test]]
name = "engine_dynamic"
path = "engine/dynamic.rs"
