[package]
name = "vane-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]

[dev-dependencies]
vane-core = { workspace = true }
vane-testutil = { workspace = true }
