[package]
name = "vane-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
vane-core = { workspace = true }
vane-testutil = { workspace = true }
