[package]
name = "vane"
version.workspace = true
authors.workspace = true
categories = ["command-line-utilities", "network-programming"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "cli", "tui", "reverse-proxy"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for the vane proxy daemon"

[lints]
workspace = true

[features]
default = ["tui"]
# When on, bare `vane` (no subcommand) launches the interactive TUI;
# `vane tui` is the explicit form. Off-builds (`--no-default-features`)
# leave the no-subcommand path emitting the help hint and skip pulling
# in `ratatui` / `crossterm`.
tui = ["dep:ratatui", "dep:crossterm"]

# `dep:crossterm` here is the same version `ratatui`'s `crossterm`
# feature pulls — keeping a separate dep entry lets the TUI module
# import the event / terminal types directly without going through
# `ratatui::crossterm`.

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
# Stream-aware coloring for our own pretty output. clap already ships
# its own help-text colors via the anstyle family; owo_colors is just
# for the section headers / status badges in section-printers below.
# `supports-colors` enables `if_supports_color(Stream::Stdout, ...)`
# so piped output stays plain-text.
owo-colors = { version = "4.3", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "signal", "io-util", "net"] }
tracing = "0.1"
vane-core = { workspace = true }
vane-mgmt = { workspace = true }

# TUI stack — gated behind the `tui` feature so packagers can drop
# the dependency tree on minimal builds. ratatui pulls crossterm
# transitively, but pinning crossterm explicitly keeps version drift
# obvious in the lockfile.
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }

[[bin]]
name = "vane"
path = "src/main.rs"
