[package]
name = "vane"
version.workspace = true
authors.workspace = true
categories = ["command-line-utilities", "network-programming"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "cli", "tui", "reverse-proxy"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for the vane proxy daemon"

[lints]
workspace = true

[features]
default = ["tui"]
# On: bare `vane` launches the interactive TUI. Off: bare `vane` emits the help hint and skips ratatui/crossterm.
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
# Stream-aware coloring for our pretty output (clap handles its own help colors).
# `supports-colors` keeps piped output plain-text via `if_supports_color(Stream::Stdout, ...)`.
owo-colors = { version = "4.3", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "signal", "io-util", "net"] }
tracing = "0.1"
vane-core = { workspace = true }
vane-mgmt = { workspace = true }

# TUI stack — gated behind `tui`. crossterm pinned explicitly (vs. via ratatui's feature)
# so version drift surfaces in the lockfile and direct imports of crossterm types work.
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }

[[bin]]
name = "vane"
path = "src/main.rs"
