[package]
name = "vane-core"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "web-programming"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "http", "reverse-proxy", "flow-graph"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Core types, FlowGraph IR, and compilation pipeline for the vane proxy engine"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
arc-swap = "1.9.1"
async-trait = { workspace = true }
base64 = "0.22"
bytes = "1.11.1"
dotenvy = "0.15.7"
fancy-regex = "0.18.0"
http = "1.4.0"
http-body = "1.0.1"
ipnet = { version = "2.12.0", features = ["serde"] }
parking_lot = "0.12.5"
rustls-pki-types = "1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", default-features = false, features = ["net", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1.44"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
