[package]
name = "vane-core"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "web-programming"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "http", "reverse-proxy", "flow-graph"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Core types, FlowGraph IR, and compilation pipeline for the vane proxy engine"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
arc-swap.workspace = true
async-trait = { workspace = true }
base64 = "0.22"
bytes.workspace = true
dotenvy = "0.15.7"
fancy-regex = "0.18.0"
guess = { workspace = true }
http.workspace = true
http-body = "1.0.1"
ipnet = { version = "2.12.0", features = ["serde"] }
# Colored banner output via `vane_core::version::print_banner` —
# both `vane` and `vaned` share the same palette so the lib owns
# the printer. `supports-colors` keeps non-TTY output plain.
owo-colors = { version = "4.3", features = ["supports-colors"] }
parking_lot.workspace = true
rustls-pki-types = "1"
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sha2 = "0.11.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
x509-parser = "0.18"

[dev-dependencies]
rcgen = "0.14"
serial_test = "3"
tempfile = "3"
