[package]
name = "vane-core"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "web-programming"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "http", "reverse-proxy", "flow-graph"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Core types, FlowGraph IR, and compilation pipeline for the vane proxy engine"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
# Expose unstable constructors (`*::for_testing(raw)`) for use by
# integration tests in sibling crates. Enable in `[dev-dependencies]`
# only — production code in other crates must obtain IDs via
# `vane_core::compile()` instead of fabricating them.
test-support = []

[dependencies]
arc-swap = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
dotenvy = "0.15.7"
fancy-regex = "0.18.0"
guess = { workspace = true }
http = "1"
http-body = "1.0.1"
ipnet = { version = "2.12.0", features = ["serde"] }
parking_lot = "0.12"
pin-project-lite = "0.2"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.11.0"
thiserror = "2"
tokio = { version = "1", features = ["net", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
x509-parser = "0.18"

[dev-dependencies]
rcgen = "0.14"
serial_test = "3"
tempfile = "3"
