[package]
name = "vaned"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "web-programming::http-server"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "daemon", "reverse-proxy", "http"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "vane proxy daemon: L4 forwarding, HTTP any-bridge, WebSocket, CGI and WASM plugins"

[lints]
workspace = true

[features]
default = ["aws-lc-rs", "h3", "cgi", "wasm"]
aws-lc-rs = ["vane-engine/aws-lc-rs"]
ring = ["vane-engine/ring"]
h3 = ["vane-engine/h3"]
cgi = ["vane-engine/cgi"]
acme = [
	"vane-engine/acme",
	"dep:bytes",
	"dep:http-body-util",
	"dep:hyper",
	"dep:hyper-util",
	"dep:time",
]
cloudflare = ["vane-engine/cloudflare"]
wasm = ["dep:vane-wasm"]

[dependencies]
anyhow = "1.0.102"
arc-swap.workspace = true
async-trait = { workspace = true }
# ACME-only deps: pulled in by the `acme` feature for the auto-bind
# `:80` synthetic listener (a tiny hyper service serving the
# challenge route). Dev-deps below already pull these for the
# integration tests.
bytes = { workspace = true, optional = true }
clap = { version = "4.6.1", features = ["derive", "env"] }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, features = ["server", "http1"], optional = true }
hyper-util = { workspace = true, features = ["tokio"], optional = true }
notify-twophase = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# `time` powers RFC 3339 rendering of the `get_certs` lifecycle
# timestamps; pulled only with `acme` since non-ACME builds don't
# expose those verbs.
time = { version = "0.3", default-features = false, features = ["formatting"], optional = true }
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-broadcast = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vane-core = { workspace = true }
vane-engine = { path = "../engine", version = "0.10.4", default-features = false }
vane-mgmt = { workspace = true }
vane-wasm = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2"
# `escargot` is the assert_cmd-recommended way to invoke a binary
# living in a sibling crate. Cargo only sets `CARGO_BIN_EXE_<name>`
# for binaries declared in the test's own package, so the daemon
# tests cannot find the `vane` CLI via `cargo_bin("vane")` on a
# clean checkout. escargot drives `cargo build` for the sibling
# package on first use and caches the resulting path.
escargot = "0.5"
http-body-util.workspace = true
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
nix = { version = "0.31", features = ["signal"] }
parking_lot.workspace = true
predicates = "3"
rcgen = "0.14"
rustls = { workspace = true, features = ["std"] }
rustls-pki-types = "1"
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false }
vane-engine = { path = "../engine", version = "0.10.4", default-features = false }
vane-mgmt = { workspace = true }
# Wasm-loader and wasm-e2e tests pull the fixture out of testutil's
# OUT_DIR (under the `wasm-fixtures` feature). The fixture
# generation only kicks in here, never in production builds.
vane-testutil = { workspace = true, features = ["wasm-fixtures"] }

[[bin]]
name = "vaned"
path = "src/main.rs"
