[package]
name = "vaned"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "web-programming::http-server"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "daemon", "reverse-proxy", "http"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "vane proxy daemon: L4 forwarding, HTTP any-bridge, WebSocket, CGI and WASM plugins"

[lints]
workspace = true

[features]
default = ["aws-lc-rs", "h3", "cgi", "wasm"]
aws-lc-rs = ["vane-engine/aws-lc-rs"]
ring = ["vane-engine/ring"]
h3 = ["vane-engine/h3"]
cgi = ["vane-engine/cgi"]
acme = [
	"vane-engine/acme",
	"dep:bytes",
	"dep:http-body-util",
	"dep:hyper",
	"dep:hyper-util",
	"dep:time",
]
cloudflare = ["vane-engine/cloudflare"]
wasm = ["dep:vane-wasm"]

[dependencies]
anyhow = "1.0.102"
arc-swap = "1"
async-trait = "0.1"
# ACME-only — auto-bind `:80` synthetic listener serving the challenge route.
bytes = { version = "1", optional = true }
clap = { version = "4.6.1", features = ["derive", "env"] }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
metrics = "0.24"
notify-twophase = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RFC 3339 rendering of `get_certs` lifecycle timestamps; gated with `acme`.
time = { version = "0.3", default-features = false, features = ["formatting"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-broadcast = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vane-banner = { workspace = true }
vane-core = { workspace = true }
vane-engine = { workspace = true, default-features = false }
vane-mgmt = { workspace = true }
vane-wasm = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2"
# escargot drives `cargo build` for sibling-package binaries; cargo only sets
# CARGO_BIN_EXE_<name> for the test's own package, so cargo_bin("vane") fails
# on a clean checkout without it.
escargot = "0.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
nix = { version = "0.31", features = ["signal"] }
parking_lot = "0.12"
predicates = "3"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pki-types = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false }
vane-engine = { workspace = true, default-features = false }
vane-mgmt = { workspace = true }
# wasm-loader / wasm-e2e tests pull testutil's `wasm-fixtures` OUT_DIR fixture (dev-only).
vane-testutil = { workspace = true, features = ["wasm-fixtures"] }

[[bin]]
name = "vaned"
path = "src/main.rs"
